--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Environment Variables
+next.config.js
 
 # dependencies
 /node_modules
